...
        );
      }

      if (mounted) {
        ScaffoldMessenger.of(context).showSnackBar(
          const SnackBar(
              content: Text('Controla tu buzón y pincha el enlace de acceso!')),
        );
        _emailController.clear();
      }
    } on AuthException catch (error) {
      if (!mounted) {
        return;
...
  }

  @override
  Widget build(BuildContext context) {
    final testPasswordField = TextFormField(
      controller: _passwordController,
      key: const Key('Password'),
      decoration: const InputDecoration(labelText: 'Password'),
      obscureText: true,
    );

    final scaffoldElements = [
      const Image(
          image: AssetImage('assets/images/logo-mascota.png'), height: 250),
      const SizedBox(height: 18),
      TextField(
        keyboardType: TextInputType.emailAddress,
        key: const Key('Email'),
        controller: _emailController,
        enabled: !_isLoading,
        onSubmitted: (_) => _signIn(),
        style: const TextStyle(fontSize: 20),
        decoration: InputDecoration(
          labelStyle: const TextStyle(fontSize: 22),
...
        ),
      ),
      testPasswordField,
      const SizedBox(height: 18),
      ElevatedButton(
          onPressed: _isLoading ? null : _signIn,
          key: Key('access'),
          style: ElevatedButton.styleFrom(
            minimumSize: const Size(double.infinity, 50),
          ),
          child: Text(
              _isLoading ? 'Enviando...' : 'Envíame el enlace de acceso',
              style: TextStyle(fontSize: 18))),
...

    if (!RunningMode.fromEnvironment().isTestingMode) {
      scaffoldElements.remove(testPasswordField);
    }

    return Scaffold(
      appBar: AppBar(title: const Text('Acceso')),
      body: SingleChildScrollView(
          padding: const EdgeInsets.symmetric(vertical: 18, horizontal: 12),
          child: Column(children: scaffoldElements)),
    );
  }
}
...
