...
      : this._internal(id, membership, email, notificationPreferences);

  bool canUseApp() {
    return _membership.canUseApp();
  }

  logout() {
    domainEvents.add(UserLogoutEvent(id, DateTime.now()));
  }

  login() {
    domainEvents
        .add(UserLoginEvent(id, DateTime.now(), _membership.toString()));
...
